--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
     #rootButtons button.selected {
       background-color: #0056b3;
     }
+    #deleteSongLink {
+      color: red;
+      display: inline-block;
+      margin-top: 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    #deleteSongLink:hover {
+      text-decoration: underline;
+    }
   </style>
 
   <!-- Firebase -->
@@ -95,6 +105,7 @@
     <button id="transposeUpButton">1 Ton Yukarı</button>
     <button id="transposeDownButton">1 Ton Aşağı</button>
     <button id="saveButton">Şarkı Düzenlemeyi Kaydet</button>
+    <a href="#" id="deleteSongLink">🗑️ Bu Şarkıyı Sil</a>
 
     <label style="margin-top: 12px; font-weight: bold;" for="editSongCategory">Seçili Şarkı Kategorisi:</label>
     <select id="editSongCategory">
@@ -127,28 +138,24 @@
   </div>
 
 <script>
-  // Firebase ayarları
   const firebaseConfig = {
     apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
     authDomain: "saganak-24ec8.firebaseapp.com",
     databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
     projectId: "saganak-24ec8",
-    storageBucket: "saganak-24ec8.firebasestorage.app",
+    storageBucket: "saganak-24ec8.appspot.com",
     messagingSenderId: "394236997954",
     appId: "1:394236997954:web:c49ebc99d98722e31b98db",
     measurementId: "G-S1C78RYR9Z"
   };
 
-  // Firebase başlat
   const app = firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
 
-  // Firebase referanslar
   const categoriesRef = database.ref('Categories');
   const songsRef = database.ref('Songs');
   const currentSelectedSongRef = database.ref('CurrentSelectedSong');
-  
-  // HTML elementler
+
   const categoryFilter = document.getElementById('categoryFilter');
   const newSongCategory = document.getElementById('newSongCategory');
   const songsDropdown = document.getElementById('songsDropdown');
@@ -163,77 +170,50 @@
   const addCategoryButton = document.getElementById('addCategoryButton');
   const editSongCategory = document.getElementById('editSongCategory');
   const rootButtonsDiv = document.getElementById('rootButtons');
+  const deleteSongLink = document.getElementById('deleteSongLink');
 
   let currentSongId = null;
   let currentSongData = null;
   let allSongs = {};
   let allCategories = {};
 
-  // Tüm kök tonları
   const rootNotes = ['C', 'C#', 'Db', 'D', 'D#', 'Eb', 'E', 'F', 'F#', 'Gb', 'G', 'G#', 'Ab', 'A', 'A#', 'Bb', 'B'];
 
-  // Akorlar transpoze için temel 12 nota ve varyasyonları
   const noteMap = {
-    'C': 0,  'B#': 0,
-    'C#': 1, 'Db': 1,
-    'D': 2,
-    'D#': 3, 'Eb': 3,
-    'E': 4,  'Fb': 4,
-    'F': 5,  'E#': 5,
-    'F#': 6, 'Gb': 6,
-    'G': 7,
-    'G#': 8, 'Ab': 8,
-    'A': 9,
-    'A#': 10,'Bb': 10,
-    'B': 11, 'Cb': 11
+    'C': 0, 'B#': 0, 'C#': 1, 'Db': 1, 'D': 2, 'D#': 3, 'Eb': 3, 'E': 4, 'Fb': 4,
+    'F': 5, 'E#': 5, 'F#': 6, 'Gb': 6, 'G': 7, 'G#': 8, 'Ab': 8, 'A': 9, 'A#': 10, 'Bb': 10, 'B': 11, 'Cb': 11
   };
 
-  // Note dizisi indeksine göre nota adı alma (sharp tercihli)
   const indexToNoteSharp = ['C','C#','D','D#','E','F','F#','G','G#','A','A#','B'];
 
-  // Akoru transpoze eden fonksiyon - profesyonel, kök notayı ve suffix'i ayrıştırır
   function transposeChordFull(chord, steps) {
-    // Örnek akorlar: Am, Bm7, C#maj7, Dbm, G7, F#m, E7, Bdim, Csus4
     const regex = /^([A-G](#|b)?)(.*)$/;
     const match = chord.match(regex);
     if (!match) return chord;
-
     const root = match[1];
     const suffix = match[3] || '';
-
     let noteIndex = noteMap[root];
     if (noteIndex === undefined) return chord;
-
     let newIndex = (noteIndex + steps) % 12;
     if (newIndex < 0) newIndex += 12;
-
-    // Yeni nota sharp gösterilir
     let newRoot = indexToNoteSharp[newIndex];
-
     return newRoot + suffix;
   }
 
-  // Şarkı içeriğindeki tüm akorları bulup transpoze eder
   function transposeSongHtml(html, steps) {
-    // Akorlar <span id='nota' style='...'>Akor</span> şeklinde saklanıyor, bu span içindekini transpoze edeceğiz
-    // Regex ile tüm span içindeki akorları alıp değiştirelim
     return html.replace(/(<span[^>]*id=['"]?nota['"]?[^>]*>)([^<]+)(<\/span>)/gi, (match, startTag, chordText, endTag) => {
       const transposedChord = transposeChordFull(chordText.trim(), steps);
       return startTag + transposedChord + endTag;
     });
   }
 
-  // Kategorileri yükle ve dropdownları doldur
   function loadCategories() {
     categoriesRef.on('value', snapshot => {
       const data = snapshot.val() || {};
       allCategories = data;
-
-      // Filtre dropdown doldur
       categoryFilter.innerHTML = '<option value="">Tüm Kategoriler</option>';
       newSongCategory.innerHTML = '<option value="" disabled selected>Kategori seçin</option>';
       editSongCategory.innerHTML = '<option value="" disabled selected>Kategori seçin</option>';
-
       for (const key in data) {
         const catName = data[key];
         categoryFilter.innerHTML += `<option value="${catName}">${catName}</option>`;
@@ -243,14 +223,11 @@
     });
   }
 
-  // Şarkıları yükle, kategori filtresine göre filtrele ve dropdowna ekle
   function loadSongs(filterCategory = '') {
     songsRef.on('value', snapshot => {
       const data = snapshot.val() || {};
       allSongs = data;
-
       songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
-
       for (const songId in data) {
         const song = data[songId];
         if (!filterCategory || (song.Category && song.Category === filterCategory)) {
@@ -260,7 +237,6 @@
     });
   }
 
-  // Seçili şarkının kök notasını rootButtons'da seçili göster
   function setSelectedRootButton(root) {
     const buttons = rootButtonsDiv.querySelectorAll('button');
     buttons.forEach(btn => {
@@ -268,7 +244,6 @@
     });
   }
 
-  // Root butonlarını oluştur
   function createRootButtons() {
     rootButtonsDiv.innerHTML = '';
     rootNotes.forEach(note => {
@@ -280,10 +255,8 @@
           alert('Önce bir şarkı seçin!');
           return;
         }
-        // Root güncelle
         songsRef.child(currentSongId).update({ Root: note }).then(() => {
           setSelectedRootButton(note);
-          // Transpoze işlemi yap
           if (currentSongData && currentSongData.Root) {
             const oldRootIndex = noteMap[currentSongData.Root];
             const newRootIndex = noteMap[note];
@@ -300,39 +273,28 @@
     });
   }
 
-  // Şarkı seçildiğinde içeriği göster, root ve kategori ayarla
   songsDropdown.addEventListener('change', e => {
     const songId = e.target.value;
     if (!songId) return;
-    currentSelectedSongRef.set(songId); // Gerçek zamanlı seçimi güncelle Firebase'e
+    currentSelectedSongRef.set(songId);
   });
 
-  // Seçilen şarkıyı Firebase'den dinle ve göster
   currentSelectedSongRef.on('value', async snapshot => {
     const songId = snapshot.val();
     if (!songId) return;
-
     if (songsDropdown.value !== songId) songsDropdown.value = songId;
-
     const songSnap = await songsRef.child(songId).once('value');
     const song = songSnap.val();
     if (!song) return;
-
     currentSongId = songId;
     currentSongData = song;
-
-    // Şarkı adı kalın başlık olarak göster
     const titleHtml = `<h2 class="song-title">${song.Name}</h2>`;
     songHtmlContainer.innerHTML = song.Html ? (song.Html.startsWith('<h2') ? song.Html : titleHtml + song.Html) : titleHtml;
-
-    // Root varsa root seç
     if (song.Root && rootNotes.includes(song.Root)) {
       setSelectedRootButton(song.Root);
     } else {
       setSelectedRootButton('');
     }
-
-    // Kategori ayarla (edit dropdown)
     if (song.Category && Object.values(allCategories).includes(song.Category)) {
       editSongCategory.value = song.Category;
     } else {
@@ -340,39 +302,32 @@
     }
   });
 
-  // Kategori filtre değişirse şarkıları yeniden yükle
   categoryFilter.addEventListener('change', e => {
     loadSongs(e.target.value);
   });
 
-  // Yeni şarkı ekleme
   addSongButton.addEventListener('click', () => {
     const name = newSongName.value.trim();
     const category = newSongCategory.value;
     const html = newSongHtml.value.trim();
-
     if (!name || !category || !html) {
       alert("Lütfen tüm alanları doldurun!");
       return;
     }
-
     const newSongKey = songsRef.push().key;
     songsRef.child(newSongKey).set({
       Name: name,
       Category: category,
       Html: `<h2 class="song-title">${name}</h2>\n${html}`,
-      Root: '' // Boş bırakabiliriz, Root'u fixMissingRoots ile güncelleriz
+      Root: ''
     }).then(() => {
       alert("Yeni şarkı eklendi!");
       newSongName.value = '';
       newSongCategory.value = '';
       newSongHtml.value = '';
-    }).catch(e => {
-      alert("Hata oluştu: " + e.message);
-    });
+    }).catch(e => alert("Hata oluştu: " + e.message));
   });
 
-  // Yeni kategori ekleme
   addCategoryButton.addEventListener('click', () => {
     const catName = newCategoryInput.value.trim();
     if (!catName) {
@@ -386,12 +341,9 @@
     categoriesRef.push(catName).then(() => {
       alert("Kategori eklendi!");
       newCategoryInput.value = '';
-    }).catch(e => {
-      alert("Hata oluştu: " + e.message);
-    });
+    }).catch(e => alert("Hata oluştu: " + e.message));
   });
 
-  // Şarkı düzenlemesi kaydetme (HTML ve kategori)
   saveButton.addEventListener('click', () => {
     if (!currentSongId) {
       alert("Önce bir şarkı seçin!");
@@ -403,19 +355,15 @@
       return;
     }
     const selectedCategory = editSongCategory.value || null;
-
     songsRef.child(currentSongId).update({
       Html: editedHtml,
       Category: selectedCategory
     }).then(() => {
       alert("Şarkı güncellendi!");
       if(currentSongData) currentSongData.Category = selectedCategory;
-    }).catch(e => {
-      alert("Güncellerken hata: " + e.message);
-    });
+    }).catch(e => alert("Güncellerken hata: " + e.message));
   });
 
-  // Ton transpoze butonları
   transposeUpButton.addEventListener('click', () => {
     if (!currentSongData) {
       alert("Önce bir şarkı seçin!");
@@ -434,51 +382,53 @@
     songHtmlContainer.innerHTML = transposed;
   });
 
-  // Eksik root bilgilerini şarkılardan otomatik tamamla
+  deleteSongLink.addEventListener('click', (e) => {
+    e.preventDefault();
+    if (!currentSongId) {
+      alert("Lütfen önce bir şarkı seçin!");
+      return;
+    }
+    const confirmDelete = confirm("Bu şarkıyı silmek istediğine emin misin?");
+    if (!confirmDelete) return;
+    songsRef.child(currentSongId).remove().then(() => {
+      alert("Şarkı silindi.");
+      currentSongId = null;
+      currentSongData = null;
+      songHtmlContainer.innerHTML = '';
+      songsDropdown.value = '';
+      editSongCategory.value = '';
+      setSelectedRootButton('');
+    }).catch(error => alert("Şarkı silinirken hata oluştu: " + error.message));
+  });
+
   async function fixMissingRoots() {
     const snapshot = await songsRef.once('value');
     const songs = snapshot.val() || {};
-
-    // İlk akoru HTML'den bul (span#nota içindeki ilk akor)
     function extractFirstChord(html) {
-      // Örnek: <span id="nota">Am</span> veya başka span yapısı olabilir
       const regex = /<span[^>]*id=['"]?nota['"]?[^>]*>([^<]+)<\/span>/i;
       const match = html.match(regex);
       return match ? match[1].trim() : null;
     }
-
-    // Kök akoru alma (Am -> A, D#m7 -> D#)
     function getBaseRootFromChord(chord) {
       const m = chord.match(/^([A-G](#|b)?)/);
       return m ? m[1] : null;
     }
-
     for (const [songId, song] of Object.entries(songs)) {
       let root = song.Root;
-
       if (!root || !/^([A-G](#|b)?)$/.test(root)) {
         const firstChord = extractFirstChord(song.Html || '');
         const baseRoot = firstChord ? getBaseRootFromChord(firstChord) : null;
-
         if (baseRoot) {
-          console.log(`Şarkı: ${song.Name} için Root güncelleniyor: ${root} => ${baseRoot}`);
           await songsRef.child(songId).update({ Root: baseRoot });
-        } else {
-          console.log(`Şarkı: ${song.Name} için Root bulunamadı.`);
         }
-      } else {
-        console.log(`Şarkı: ${song.Name} için Root zaten var: ${root}`);
       }
     }
-    console.log("Root güncelleme işlemi tamamlandı.");
   }
 
-  // Başlangıçta kategorileri ve şarkıları yükle
   loadCategories();
   loadSongs();
   createRootButtons();
   fixMissingRoots();
-
 </script>
 
 </body>
