--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <button id="saveButton">Şarkı Düzenlemeyi Kaydet</button>
     <a href="#" id="deleteSongLink">🗑️ Bu Şarkıyı Sil</a>
 
-    <label style="margin-top: 12px; font-weight: bold;" for="editSongCategory">Seçili Şarkı Kategorisi:</label>
+    <br><label style="margin-top: 12px; font-weight: bold;" for="editSongCategory">Seçili Şarkı Kategorisi:</label>
     <select id="editSongCategory">
       <option value="" disabled selected>Kategori seçin</option>
     </select>
