--- a/index.html
+++ b/index.html
@@ -14,55 +14,35 @@
       color: #333;
     }
     select, input[type="text"], textarea, button {
-      font-size: 16px;
+      font-size: 14px;
     }
     select, input[type="text"], textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 6px 0 12px;
+      width: auto;
+      padding: 6px 8px;
+      margin: 6px 8px 12px 0;
       border-radius: 4px;
       border: 1px solid #ddd;
       box-sizing: border-box;
     }
     button {
-      padding: 10px 16px;
-      margin: 6px 6px 12px 0;
+      padding: 8px 14px;
+      margin: 4px 4px 12px 0;
       background-color: #28a745;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 4px;
       cursor: pointer;
+      font-size: 14px;
     }
     button:hover {
       background-color: #218838;
     }
-    #songHtmlContainer {
-      margin-top: 20px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      min-height: 150px;
-      white-space: pre-wrap;
-      overflow-wrap: break-word;
-      outline: none;
-    }
-    h2.song-title {
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .section {
-      background: white;
-      padding: 15px;
-      margin-bottom: 25px;
-      border-radius: 6px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    label {
-      font-weight: bold;
-    }
     #rootButtons button {
       background-color: #007bff;
       margin: 2px;
+      padding: 4px 8px;
+      font-size: 12px;
+      border-radius: 3px;
     }
     #rootButtons button.selected {
       background-color: #0056b3;
@@ -73,9 +53,41 @@
       margin-top: 10px;
       text-decoration: none;
       font-weight: bold;
+      font-size: 14px;
     }
     #deleteSongLink:hover {
       text-decoration: underline;
+    }
+    #songHtmlContainer {
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      background-color: #fff;
+      min-height: 150px;
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
+      outline: none;
+    }
+    .toolbar {
+      margin: 8px 0;
+    }
+    .toolbar button {
+      background: #555;
+      font-size: 12px;
+      padding: 4px 8px;
+    }
+    .toolbar button:hover {
+      background: #333;
+    }
+    .section {
+      background: white;
+      padding: 15px;
+      margin-bottom: 25px;
+      border-radius: 6px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+    label {
+      font-weight: bold;
     }
   </style>
 
@@ -102,16 +114,22 @@
       <div id="rootButtons" style="margin-top:5px;"></div>
     </div>
 
-    <button id="transposeUpButton">1 Ton Yukarı</button>
-    <button id="transposeDownButton">1 Ton Aşağı</button>
-    <button id="saveButton">Şarkı Düzenlemeyi Kaydet</button>
-    <a href="#" id="deleteSongLink">🗑️ Bu Şarkıyı Sil</a>
-
-    <br><label style="margin-top: 12px; font-weight: bold;" for="editSongCategory">Seçili Şarkı Kategorisi:</label>
+    <label style="margin-top: 12px; font-weight: bold;" for="editSongCategory">Seçili Şarkı Kategorisi:</label>
     <select id="editSongCategory">
       <option value="" disabled selected>Kategori seçin</option>
     </select>
-    
+
+    <a href="#" id="deleteSongLink">🗑️ Bu Şarkıyı Sil</a>
+
+    <!-- Mini Toolbar -->
+    <div class="toolbar">
+      <button onclick="format('bold')">B</button>
+      <button onclick="format('italic')">I</button>
+      <button onclick="format('underline')">U</button>
+    </div>
+
+    <button id="saveButton">Değişikliği Kaydet</button>
+
     <div id="songHtmlContainer" contenteditable="true"></div>
   </div>
 
@@ -138,298 +156,15 @@
   </div>
 
 <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
-    authDomain: "saganak-24ec8.firebaseapp.com",
-    databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "saganak-24ec8",
-    storageBucket: "saganak-24ec8.appspot.com",
-    messagingSenderId: "394236997954",
-    appId: "1:394236997954:web:c49ebc99d98722e31b98db",
-    measurementId: "G-S1C78RYR9Z"
-  };
-
-  const app = firebase.initializeApp(firebaseConfig);
-  const database = firebase.database();
-
-  const categoriesRef = database.ref('Categories');
-  const songsRef = database.ref('Songs');
-  const currentSelectedSongRef = database.ref('CurrentSelectedSong');
-
-  const categoryFilter = document.getElementById('categoryFilter');
-  const newSongCategory = document.getElementById('newSongCategory');
-  const songsDropdown = document.getElementById('songsDropdown');
-  const songHtmlContainer = document.getElementById('songHtmlContainer');
-  const saveButton = document.getElementById('saveButton');
-  const transposeUpButton = document.getElementById('transposeUpButton');
-  const transposeDownButton = document.getElementById('transposeDownButton');
-  const newSongName = document.getElementById('newSongName');
-  const newSongHtml = document.getElementById('newSongHtml');
-  const addSongButton = document.getElementById('addSongButton');
-  const newCategoryInput = document.getElementById('newCategoryInput');
-  const addCategoryButton = document.getElementById('addCategoryButton');
-  const editSongCategory = document.getElementById('editSongCategory');
-  const rootButtonsDiv = document.getElementById('rootButtons');
-  const deleteSongLink = document.getElementById('deleteSongLink');
-
-  let currentSongId = null;
-  let currentSongData = null;
-  let allSongs = {};
-  let allCategories = {};
-
-  const rootNotes = ['C', 'C#', 'Db', 'D', 'D#', 'Eb', 'E', 'F', 'F#', 'Gb', 'G', 'G#', 'Ab', 'A', 'A#', 'Bb', 'B'];
-
-  const noteMap = {
-    'C': 0, 'B#': 0, 'C#': 1, 'Db': 1, 'D': 2, 'D#': 3, 'Eb': 3, 'E': 4, 'Fb': 4,
-    'F': 5, 'E#': 5, 'F#': 6, 'Gb': 6, 'G': 7, 'G#': 8, 'Ab': 8, 'A': 9, 'A#': 10, 'Bb': 10, 'B': 11, 'Cb': 11
-  };
-
-  const indexToNoteSharp = ['C','C#','D','D#','E','F','F#','G','G#','A','A#','B'];
-
-  function transposeChordFull(chord, steps) {
-    const regex = /^([A-G](#|b)?)(.*)$/;
-    const match = chord.match(regex);
-    if (!match) return chord;
-    const root = match[1];
-    const suffix = match[3] || '';
-    let noteIndex = noteMap[root];
-    if (noteIndex === undefined) return chord;
-    let newIndex = (noteIndex + steps) % 12;
-    if (newIndex < 0) newIndex += 12;
-    let newRoot = indexToNoteSharp[newIndex];
-    return newRoot + suffix;
+  function format(command) {
+    document.execCommand(command, false, null);
   }
 
-  function transposeSongHtml(html, steps) {
-    return html.replace(/(<span[^>]*id=['"]?nota['"]?[^>]*>)([^<]+)(<\/span>)/gi, (match, startTag, chordText, endTag) => {
-      const transposedChord = transposeChordFull(chordText.trim(), steps);
-      return startTag + transposedChord + endTag;
-    });
-  }
-
-  function loadCategories() {
-    categoriesRef.on('value', snapshot => {
-      const data = snapshot.val() || {};
-      allCategories = data;
-      categoryFilter.innerHTML = '<option value="">Tüm Kategoriler</option>';
-      newSongCategory.innerHTML = '<option value="" disabled selected>Kategori seçin</option>';
-      editSongCategory.innerHTML = '<option value="" disabled selected>Kategori seçin</option>';
-      for (const key in data) {
-        const catName = data[key];
-        categoryFilter.innerHTML += `<option value="${catName}">${catName}</option>`;
-        newSongCategory.innerHTML += `<option value="${catName}">${catName}</option>`;
-        editSongCategory.innerHTML += `<option value="${catName}">${catName}</option>`;
-      }
-    });
-  }
-
-  function loadSongs(filterCategory = '') {
-    songsRef.on('value', snapshot => {
-      const data = snapshot.val() || {};
-      allSongs = data;
-      songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
-      for (const songId in data) {
-        const song = data[songId];
-        if (!filterCategory || (song.Category && song.Category === filterCategory)) {
-          songsDropdown.innerHTML += `<option value="${songId}">${song.Name}</option>`;
-        }
-      }
-    });
-  }
-
-  function setSelectedRootButton(root) {
-    const buttons = rootButtonsDiv.querySelectorAll('button');
-    buttons.forEach(btn => {
-      btn.classList.toggle('selected', btn.textContent === root);
-    });
-  }
-
-  function createRootButtons() {
-    rootButtonsDiv.innerHTML = '';
-    rootNotes.forEach(note => {
-      const btn = document.createElement('button');
-      btn.textContent = note;
-      btn.type = 'button';
-      btn.addEventListener('click', () => {
-        if (!currentSongId) {
-          alert('Önce bir şarkı seçin!');
-          return;
-        }
-        songsRef.child(currentSongId).update({ Root: note }).then(() => {
-          setSelectedRootButton(note);
-          if (currentSongData && currentSongData.Root) {
-            const oldRootIndex = noteMap[currentSongData.Root];
-            const newRootIndex = noteMap[note];
-            if (oldRootIndex !== undefined && newRootIndex !== undefined) {
-              const diff = newRootIndex - oldRootIndex;
-              const transposedHtml = transposeSongHtml(songHtmlContainer.innerHTML, diff);
-              songHtmlContainer.innerHTML = transposedHtml;
-              currentSongData.Root = note;
-            }
-          }
-        }).catch(e => alert('Root güncellenirken hata: ' + e.message));
-      });
-      rootButtonsDiv.appendChild(btn);
-    });
-  }
-
-  songsDropdown.addEventListener('change', e => {
-    const songId = e.target.value;
-    if (!songId) return;
-    currentSelectedSongRef.set(songId);
-  });
-
-  currentSelectedSongRef.on('value', async snapshot => {
-    const songId = snapshot.val();
-    if (!songId) return;
-    if (songsDropdown.value !== songId) songsDropdown.value = songId;
-    const songSnap = await songsRef.child(songId).once('value');
-    const song = songSnap.val();
-    if (!song) return;
-    currentSongId = songId;
-    currentSongData = song;
-    const titleHtml = `<h2 class="song-title">${song.Name}</h2>`;
-    songHtmlContainer.innerHTML = song.Html ? (song.Html.startsWith('<h2') ? song.Html : titleHtml + song.Html) : titleHtml;
-    if (song.Root && rootNotes.includes(song.Root)) {
-      setSelectedRootButton(song.Root);
-    } else {
-      setSelectedRootButton('');
-    }
-    if (song.Category && Object.values(allCategories).includes(song.Category)) {
-      editSongCategory.value = song.Category;
-    } else {
-      editSongCategory.value = "";
-    }
-  });
-
-  categoryFilter.addEventListener('change', e => {
-    loadSongs(e.target.value);
-  });
-
-  addSongButton.addEventListener('click', () => {
-    const name = newSongName.value.trim();
-    const category = newSongCategory.value;
-    const html = newSongHtml.value.trim();
-    if (!name || !category || !html) {
-      alert("Lütfen tüm alanları doldurun!");
-      return;
-    }
-    const newSongKey = songsRef.push().key;
-    songsRef.child(newSongKey).set({
-      Name: name,
-      Category: category,
-      Html: `<h2 class="song-title">${name}</h2>\n${html}`,
-      Root: ''
-    }).then(() => {
-      alert("Yeni şarkı eklendi!");
-      newSongName.value = '';
-      newSongCategory.value = '';
-      newSongHtml.value = '';
-    }).catch(e => alert("Hata oluştu: " + e.message));
-  });
-
-  addCategoryButton.addEventListener('click', () => {
-    const catName = newCategoryInput.value.trim();
-    if (!catName) {
-      alert("Kategori adı boş olamaz!");
-      return;
-    }
-    if (Object.values(allCategories).includes(catName)) {
-      alert("Bu kategori zaten var!");
-      return;
-    }
-    categoriesRef.push(catName).then(() => {
-      alert("Kategori eklendi!");
-      newCategoryInput.value = '';
-    }).catch(e => alert("Hata oluştu: " + e.message));
-  });
-
-  saveButton.addEventListener('click', () => {
-    if (!currentSongId) {
-      alert("Önce bir şarkı seçin!");
-      return;
-    }
-    const editedHtml = songHtmlContainer.innerHTML.trim();
-    if (!editedHtml) {
-      alert("Şarkı içeriği boş olamaz!");
-      return;
-    }
-    const selectedCategory = editSongCategory.value || null;
-    songsRef.child(currentSongId).update({
-      Html: editedHtml,
-      Category: selectedCategory
-    }).then(() => {
-      alert("Şarkı güncellendi!");
-      if(currentSongData) currentSongData.Category = selectedCategory;
-    }).catch(e => alert("Güncellerken hata: " + e.message));
-  });
-
-  transposeUpButton.addEventListener('click', () => {
-    if (!currentSongData) {
-      alert("Önce bir şarkı seçin!");
-      return;
-    }
-    const transposed = transposeSongHtml(songHtmlContainer.innerHTML, +1);
-    songHtmlContainer.innerHTML = transposed;
-  });
-
-  transposeDownButton.addEventListener('click', () => {
-    if (!currentSongData) {
-      alert("Önce bir şarkı seçin!");
-      return;
-    }
-    const transposed = transposeSongHtml(songHtmlContainer.innerHTML, -1);
-    songHtmlContainer.innerHTML = transposed;
-  });
-
-  deleteSongLink.addEventListener('click', (e) => {
-    e.preventDefault();
-    if (!currentSongId) {
-      alert("Lütfen önce bir şarkı seçin!");
-      return;
-    }
-    const confirmDelete = confirm("Bu şarkıyı silmek istediğine emin misin?");
-    if (!confirmDelete) return;
-    songsRef.child(currentSongId).remove().then(() => {
-      alert("Şarkı silindi.");
-      currentSongId = null;
-      currentSongData = null;
-      songHtmlContainer.innerHTML = '';
-      songsDropdown.value = '';
-      editSongCategory.value = '';
-      setSelectedRootButton('');
-    }).catch(error => alert("Şarkı silinirken hata oluştu: " + error.message));
-  });
-
-  async function fixMissingRoots() {
-    const snapshot = await songsRef.once('value');
-    const songs = snapshot.val() || {};
-    function extractFirstChord(html) {
-      const regex = /<span[^>]*id=['"]?nota['"]?[^>]*>([^<]+)<\/span>/i;
-      const match = html.match(regex);
-      return match ? match[1].trim() : null;
-    }
-    function getBaseRootFromChord(chord) {
-      const m = chord.match(/^([A-G](#|b)?)/);
-      return m ? m[1] : null;
-    }
-    for (const [songId, song] of Object.entries(songs)) {
-      let root = song.Root;
-      if (!root || !/^([A-G](#|b)?)$/.test(root)) {
-        const firstChord = extractFirstChord(song.Html || '');
-        const baseRoot = firstChord ? getBaseRootFromChord(firstChord) : null;
-        if (baseRoot) {
-          await songsRef.child(songId).update({ Root: baseRoot });
-        }
-      }
-    }
-  }
-
-  loadCategories();
-  loadSongs();
-  createRootButtons();
-  fixMissingRoots();
+  // Firebase ayarları ve geri kalan kod aynen senin versiyonla aynı kalabilir.
+  // Tek fark, transpose butonları kaldırıldı ve saveButton ID'si değişmedi.
 </script>
+
+<!-- Mevcut script içeriğinizi buraya ekleyebilirsiniz -->
 
 </body>
 </html>
