--- a/index.html
+++ b/index.html
@@ -6,89 +6,92 @@
   <title>Grup Sağanak Setlist ⚡</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f4f4f4;
-    }
-    h1 {
-      color: #333;
-    }
-    select, input[type="text"], textarea, button {
-      font-size: 14px;
-    }
-    select, input[type="text"], textarea {
-      width: auto;
-      padding: 6px 8px;
-      margin: 6px 8px 12px 0;
-      border-radius: 4px;
-      border: 1px solid #ddd;
-      box-sizing: border-box;
-    }
-    button {
-      padding: 8px 14px;
-      margin: 4px 4px 12px 0;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-    button:hover {
-      background-color: #218838;
-    }
-    #rootButtons button {
-      background-color: #007bff;
-      margin: 2px;
-      padding: 4px 8px;
-      font-size: 12px;
-      border-radius: 3px;
-    }
-    #rootButtons button.selected {
-      background-color: #0056b3;
-    }
-    #deleteSongLink {
-      color: red;
-      display: inline-block;
-      margin-top: 10px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 14px;
-    }
-    #deleteSongLink:hover {
-      text-decoration: underline;
-    }
-    #songHtmlContainer {
-      margin-top: 10px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      min-height: 150px;
-      white-space: pre-wrap;
-      overflow-wrap: break-word;
-      outline: none;
-    }
-    .toolbar {
-      margin: 8px 0;
-    }
-    .toolbar button {
-      background: #555;
-      font-size: 12px;
-      padding: 4px 8px;
-    }
-    .toolbar button:hover {
-      background: #333;
-    }
-    .section {
-      background: white;
-      padding: 15px;
-      margin-bottom: 25px;
-      border-radius: 6px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    label {
-      font-weight: bold;
-    }
+  font-family: Arial, sans-serif;
+  margin: 20px;
+  background-color: #f4f4f4;
+}
+
+h1 {
+  color: #333;
+}
+
+select, input[type="text"], textarea {
+  font-size: 13px;
+  width: auto;
+  padding: 5px 8px;
+  margin: 6px 0 12px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+}
+
+button {
+  font-size: 13px;
+  padding: 6px 10px;
+  margin: 4px 4px 10px 0;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #218838;
+}
+
+#rootButtons button {
+  font-size: 11px;
+  padding: 3px 6px;
+  margin: 2px;
+  background-color: #007bff;
+}
+
+#rootButtons button.selected {
+  background-color: #0056b3;
+}
+
+#songHtmlContainer {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  min-height: 150px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  outline: none;
+}
+
+h2.song-title {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.section {
+  background: white;
+  padding: 15px;
+  margin-bottom: 25px;
+  border-radius: 6px;
+  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+}
+
+label {
+  font-weight: bold;
+}
+
+#deleteSongLink {
+  color: red;
+  display: inline-block;
+  margin-top: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+#deleteSongLink:hover {
+  text-decoration: underline;
+}
+
   </style>
 
   <!-- Firebase -->
